Assignment 5/Carvalho_Julian_Asg5/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Julian C\Desktop\School\MRU\1501 Comp\Assignment 5\Carvalho_Julian_Asg5
-d
C:\Users\Julian C\Desktop\School\MRU\1501 Comp\Assignment 5\Carvalho_Julian_Asg5\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Julian C\Desktop\School\MRU\1501 Comp\Assignment 5\Carvalho_Julian_Asg5\PopulaceSystem.java
<---- end of javadoc command ---->
Loading source file C:\Users\Julian C\Desktop\School\MRU\1501 Comp\Assignment 5\Carvalho_Julian_Asg5\PopulaceSystem.java...
C:\Users\Julian C\Desktop\School\MRU\1501 Comp\Assignment 5\Carvalho_Julian_Asg5\PopulaceSystem.java:144: error: ')' expected
      System.out.println("The Total Population Size: " + total pop);
                                                              ^
C:\Users\Julian C\Desktop\School\MRU\1501 Comp\Assignment 5\Carvalho_Julian_Asg5\PopulaceSystem.java:144: error: illegal start of expression
      System.out.println("The Total Population Size: " + total pop);
                                                                  ^
2 errors
